2010-09-16  Romain Francois <romain@r-enthusiasts.com>

    * R/00_classes.R: moving classes definition here
    
    * inst/Rcpp/Module.h: added C++ class S4_field that builds S4 objects of 
    class C++Field. Build the list of fields as part of the creation of the 
    C++Class objects
    
    * src/Module.cpp: .Call functions CppField__get and CppField__set to get/set
    values of an object's field using external pointers directly (no std::map
    lookup internally)
    
    * R/Module.R: (unexported) functions .getField and .setField that 
    call CppField__get and CppField__set
    
    * inst/include/Rcpp/Reference.h: skeleton for a Rcpp::Reference class that 
    will help dealing with reference classes on the C++ side
    
    * src/Reference.cpp: implementation (needs update)

2010-09-15  Romain Francois <romain@r-enthusiasts.com>

    * DESCRIPTION: added the declaration MinimumSvnRev to control which version
    of R-devel we need so that Rcpp fully works, currently set to 52905
    
    * R/zzz.R: check the svn revision of R against the declared MinimumSvnRev
    requirement and print a message if necessary (this will only stay for the 
    interim period while we develop 0.8.7 so that we all are on the same page.

    * inst/include/Rcpp/Module.h: added methods to class_Base : methods_arity 
    and methods_voidness to query the number of arguments of methods of a class
    and if the method is void
    
    * R/Module.R: implement referenceMethods (from methods) for 'C++Class'
    
2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Add include of unistd.h to make Solaris happy

2010-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.6

	* debian/*: Similarly updated for new release to Debian

2010-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Also include typeinfo header file

2010-09-08  Romain Francois <romain@r-enthusiasts.com>
